# selenium_test

./: Cargo.toml  sequence.json
src/: main.rs  sequence_parser.rs
