[package]
name = "selenium_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.29.3"
tokio = "1.19.2"
webdriver-install = "0.3.2"
dirs = "4.0.0"
clap = { version = "3.2.5", features = ["derive"] }